# tasked

./: .gitignore  README.md  Tasked - Presentation.md  proxy.ts
app/: Dockerfile  eslint.config.mjs  middleware.ts  package.json
app/app/: api.ts  globals.css  hooks.tsx  layout.tsx  page.tsx  react-query-provider.tsx  store.ts
app/app/components/: button.tsx  cache-invalidator.tsx  confirmation-modal.tsx  expand-icon.tsx  field.tsx  idle-detector.tsx  input.tsx  modal.tsx  status.tsx
app/app/projects/[id]/: add-task-modal.tsx  delete-task.tsx  fields.tsx  page.tsx  task-detail-modal.tsx  task.tsx
app/src/lib/: api.ts
app/src/lib/components/: input.svelte  modal.svelte
app/src/routes/: +page.svelte
server/: Cargo.toml
server/entity/: Cargo.toml
server/entity/src/entities/: mod.rs  prelude.rs  project.rs  task.rs  task_project.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251018_143924_create_tasks.rs  m20251021_171134_task_due_date_date.rs
server/scripts/: reset-db.sh
server/src/: main.rs  result.rs  test_helpers.rs
server/src/api/: helpers.rs  mod.rs  projects.rs  subscription.rs  tasks.rs
server/src/models/: project.rs  task.rs
